--- a/Docs/dact.1
+++ b/Docs/dact.1
@@ -1,7 +1,7 @@
 .PU
 .TH DACT 1
 .SH NAME
-dact \- compress or expand a file, or stream
+dact \- compress or expand a file or stream
 .SH SYNOPSIS
 .ll +10
 .B dact
@@ -29,7 +29,7 @@ best one for each block.
 .TP
 .B \-d
 Decompress the file (or stdin, if no file is given), removing
-the extention if it has a valid one.
+the extension if it has a valid one.
 .TP
 .B \-s
 Display statistics about the file, such as:
@@ -60,8 +60,8 @@ List compression algorithms available.
 Toggle use of CRCs.  This option is especially useful when
 combined with the network capabilities of DACT.  It allows
 you to create a compressed file with only the header pointing
-to an web page that contains the real DACT file (which
-normally has it's CRCs checked against the compressed header
+to a web page that contains the real DACT file (which
+normally has its CRCs checked against the compressed header
 to ensure they're the same file), with this option the files
 do not have to be from the same source (i.e., you can have
 an updated copy automatically extend itself.)
@@ -104,11 +104,11 @@ check for this file and use it.  If you have Debian and run
 your entire system.
 .TP
 .B \-a
-DACT modules.  This option will fetch the latest modules from the internet and place them in $HOME/.dact/ in a subdirectory cooresponding to your Operating System and CPU Architecture.
+DACT modules.  This option will fetch the latest modules from the internet and place them in $HOME/.dact/ in a subdirectory corresponding to your Operating System and CPU Architecture.
 .TP
 .B \-b\ size
-Use the specified block size to compress the file.  This
-option's parameters is in bytes.
+Use the specified block size to compress the file.  The
+size parameters is in bytes.
 .TP
 .B \-e\ num
 Exclude an algorithm from being used.  This option is useful
@@ -119,7 +119,7 @@ option.)
 .B \-m\ file
 Load another config file.  This option will attempt to load
 the specified file in addition to the normal files, the
-options in this file will supercede other options.
+options in this file will supersede other options.
 .TP
 .B \-o\ file
 Alternate output.  This option sends output to a file instead
